--- a/app/src/main/res/layout/content1_chat.xml
+++ b/app/src/main/res/layout/content1_chat.xml
@@ -2,8 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
 
-
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -16,28 +14,34 @@
 
         <TextView
             android:id="@+id/eventTimeChat"
-            style="@style/TextViewsz"
-            android:textColor="@color/secondary_text"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/primary_text"
+            android:textSize="@dimen/material_text_caption" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+
             android:layout_toRightOf="@+id/eventTimeChat">
 
             <TextView
                 android:id="@+id/lastName"
-                style="@style/TextViewsz"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1.3"
                 android:gravity="left"
-                />
+                android:textColor="@color/primary_text"
+                android:textSize="@dimen/material_text_caption" />
 
             <TextView
                 android:id="@+id/message"
-                style="@style/TextViewsz"
                 android:layout_width="match_parent"
-                android:layout_weight="1" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/primary_text"
+                android:textSize="@dimen/material_text_caption" />
         </LinearLayout>
 
 
